- update current job to Icomera after transition - remove animation from tooltips - fix issue where printing page would include white space - fix issue where printed page would not include text to scale on A4 - updated print cv layout - updated job descriptions

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -30,7 +30,7 @@ body {
 }
 
 .flex-justify-end {
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .flex-justify-space-between {
@@ -42,7 +42,7 @@ body {
 }
 
 .flex-align-end {
-  align-items: end;
+  align-items: flex-end;
 }
 
 .gap-2 {
