--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -1,31 +1,24 @@
 [role="tooltip"] {
   visibility: hidden;
-  opacity: 0;
   background-color: var(--colour-primary);
   color: var(--colour-dark);
   padding: var(--grid-px);
   border: 1px solid var(--colour-dark);
   outline: 1px solid var(--colour-primary);
   border-radius: 4px;
-  font-size: 0px;
+  font-size: 12px;
   box-shadow: 0px 0px 8px var(--colour-dark);
   z-index: 1000;
-  transition: transform 0.1s linear, visibility 0s, opacity var(--transition),
-    font-size var(--transition);
 }
 
 [role="tooltip"][data-show] {
-  display: block;
   visibility: visible;
-  opacity: 1;
-  font-size: 12px;
 }
 
 [data-popper-arrow] {
   bottom: -5px;
   height: 6px;
   width: 6px;
-  transition: transform 0.1s linear;
 }
 [data-popper-arrow]::after {
   content: "";
@@ -39,5 +32,4 @@
   bottom: 0;
   left: 0;
   position: absolute;
-  transition: transform 0.1s linear;
 }
