--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -1,7 +1,7 @@
 :root {
   --serif: "Noto Serif", constantia, palatino, georgia, serif;
-  --sans: "Noto Sans", -apple-system, BlinkMacSystemFont, helvetica, arial,
-    sans-serif;
+  --sans:
+    "Noto Sans", -apple-system, BlinkMacSystemFont, helvetica, arial, sans-serif;
   font-family: var(--serif);
 
   color: var(--colour-text);
@@ -9,7 +9,6 @@
 }
 
 * {
-  font-size: 14px;
   line-height: 1.8;
 }
 
@@ -64,6 +63,10 @@ p {
   margin-bottom: calc(var(--text-margin) * 4);
 }
 
+li {
+  font-size: 14px;
+}
+
 .p-lg {
   font-size: 16px;
 }
@@ -79,10 +82,6 @@ figcaption {
 }
 
 @media (min-width: 768px) {
-  * {
-    font-size: 16px;
-  }
-
   h1 {
     font-size: 32px;
     margin-bottom: calc(var(--text-margin) * 3);
@@ -110,6 +109,10 @@ figcaption {
   p {
     font-size: 16px;
     margin-bottom: calc(var(--text-margin) * 4);
+  }
+
+  li {
+    font-size: 16px;
   }
 
   .p-lg {
